--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -82,7 +82,7 @@
     }
   }
   &__nav {
-    margin-top: 8px;
+    //margin-top: 8px;
     width: 100%;
     max-height: 8.5rem;
     display: flex;
